--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <section>
             <div class="container">
                 <div id="spinner" class="spin mx-auto">
-                    <img class="h-100 w-100" src="img/loading.gif" alt="">
+                    <img class="h-100 w-100" src="img/ezgif-3-b313c5ba858d.gif" alt="">
                 </div>
             </div>
         </section>
